<resources>
    <string name="app_name">My First App</string>
    <string name="hello_world">Hello Android</string>
    <string name="ok">OK</string>
    <string name="enterName">Please enter your name here:</string>
    <string name="enterNameHint">Your name here</string>
    <string name="enterNameConfirmed">Confirmed My Name</string>
    <string name="enterNameLater">Enter My Name Later</string>
    <string name="welcome">Welcome&#160;</string>
    <string name="editName">Edit Name</string>
    <string name="repetitionCompleted">Repetition Exercise completed&#160;</string>
    <string name="times">&#160;times.</string>
    <string name="share">Share Records</string>
    <string name="repetitionExercise">Repetition Exercise</string>
    <string name="entertainmentExercise">Entertainment Exercise</string>
    <string name="history">History</string>
    <string name="startRepetitionExercise">Start Repetition Exercise!</string>
    <string name="backToMenu">Back to Menu</string>
    <string name="timeLimit">Time Limit&#160;</string>
    <string name="timeLimitYes">(Enabled)</string>
    <string name="timeLimitNo">(Disabled)</string>
    <string name="play">Play&#160;</string>
    <string name="time">&#160;Time&#160;</string>
    <string name="appear">Appear&#160;</string>
    <string name="buttons">&#160;Buttons</string>
    <string name="randomButtonOrderOn">Random Button Order ON</string>
    <string name="randomButtonOrderOff">Random Button Order OFF</string>
    <string name="nextButtonIndicationOn">Next-button Indication ON</string>
    <string name="nextButtonIndicationOff">Next-button Indication OFF</string>
    <string name="buttonSize">Button Size</string>
    <string name="freePlayMode">Free-play Mode</string>
    <string name="repetitionMode">Repetition Mode</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="options">Options</string>
    <string name="timeLeft">Time Left:&#160;</string>
    <string name="restart">Restart</string>
    <string name="backToExercise">Back to Exercise</string>
    <string name="areYouSure">Are you sure to&#160;</string>
    <string name="questionMark">&#63;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mode">Mode:&#160;</string>
    <string name="freePlay">Free-play</string>
    <string name="repetition">Repetition</string>
    <string name="repeatTimes">Repeat Times:&#160;</string>
    <string name="startTime">Start time:&#160;</string>
    <string name="endTime">End Time:&#160;</string>
    <string name="backToHistoryList">Back to History list</string>
    <string name="roundSpace">Round&#160;</string>
    <string name="spaceStart">&#160;Start</string>
    <string name="timeSpace">Time:&#160;</string>
    <string name="deleteRecord">Delete Record</string>
    <string name="shareRecord">Share Record</string>
    <string name="shareAllRecord">Share all Records</string>
    <string name="start">Start</string>
    <string name="backToMainMenuConfirmation">back to Main Menu</string>
    <string name="restartConfirmation">restart this attempt</string>
    <string name="small">S</string>
    <string name="medium">M</string>
    <string name="large">L</string>
    <string name="congratulationFinish">Congratulation on finish the exercise!</string>
    <string name="unsuccessfulToFinish">Unsuccessful to finish the exercise.</string>
    <string name="takePhoto">Take a Photo</string>
    <string name="selectPhoto">Select a Photo</string>
    <string name="retry">Retry</string>
    <string name="deleteHistory">delete this history</string>
    <string name="TotalSpace">Total&#160;</string>
    <string name="buttonCorrectPress">&#160;buttons been correctly pressed.</string>
    <string name="load">Load</string>
    <string name="wrong">&#160;wrong</string>
    <string name="correct">&#160;correct</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="inCompleted">In-Completed</string>
    <string name="repeatDone">Repeat Done:&#160;</string>
    <string name="randomSliderRotationOn">Random Slider Rotation ON</string>
    <string name="randomSliderRotationOff">Random Slider Rotation OFF</string>
</resources>